// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextEditor common cases 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %Ubz
[?] B@23-25 小倉位 %mnN
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %7Od
- 情報 %pd9
- 企業決策中心 %Lbz
對象：各國政府，FBI、CIA、美軍等 %wYp
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %ulo
[+]
提供政府服務 %h5Q
營收增長高 %p2h
利潤率進步 %rHQ
現金充足，財務沒有問題 %cLk
有炒股動力，@ARK、@WSB皆關注 %dhk
[-]
至今10多年仍無法盈利 %b4r
需要商業化，不僅是做政府生意 %V0n
股權獎勵高，拉低盈利 %D6Y
很難做到像消費者級別的量，增長的想像空間不大 %Qu5"
`;

exports[`TextEditor common cases 2`] = `
"[[財政赤字貨幣化]]
[*]
和[[現代貨幣理論]]緊密相關 %Drx

[[現代貨幣理論]]
[*]
成立前提： %bL5
- 政府沒有硬性承諾（硬錨），只有軟性承諾（軟錨），目前主流為國內通膨控制在2%左右 %PBO
- 美、歐元等國際貨幣的通脹可由全球分攤，美歐通脹不會大幅上升 %zMR
疫情後美國財政政策奉行現代貨幣理論 %BxZ"
`;

exports[`TextEditor common cases 3`] = `
"$HOL
[#] 夢想股 %zKt
[?] B %QXN
[+]
收購Astra ，Astra老闆為前NASA主任 %A8W
發展小型運載火箭、運載小型衛星、可量產、天天發射 %DRq
2025年營收達25億美元 %FuM
和$SRAC相比 %2ER
想像空間大 %G8V
[-]
短期有追高 %Dbp

$SPCE
[?] Buy %P1q
[+]
重新舉行太空試飛計畫 %wAR
[-]
試飛失敗將重挫（例2020試飛失敗後大跌） %cTG

[[SPAC]]
操作需保持耐心、很少一次拉上去，以$SRAC為例，均在觸及20日均線後反彈

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %Qwx
[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場 %7VK
太空商業化將帶來新的商業模式 %czQ

[[ULA]]
由$BA與$LMT聯合成立
和[[SpaceX]]是競爭關係

[[SpaceX]]
尚未上市
目前價值最高的太空股

$BA
[?] B (逐步買入) %UuQ

$LMT
$300可能是底部"
`;

exports[`TextEditor common cases 4`] = `
"[*]
重點在翻譯$PLTR CEO財報發布會上所說的話 #求來源 \`> 相當繞口，確實數據真實度是個問題，但並沒有說如何解決\` %x4P

$PLTR
[?] B 支撐@22 %8LT
[*]
產品：用[[AI]]幫政府情報單位執行機密軍事行動、大數據幫能源、航空公司、醫療藥品研究 %Rz6
[+]
[[ARK]]看好，在股票大跌後大買進 %95H
CEO是技術出身
[-]
目前收入有60%來自政府 %CIN
[!]
股價解禁日拋售，股價大跌 %1bb

//////

$PLTR@ME
[*]
產品：[[大數據]]分析 %Chg
[-]
大數據分析無法量產，發展受限 %YCH
[!]
財報發布會 %EyD

[[大數據]]@ME
[-]
大數據分析一般只能做B2B，且需客製化，無法量產應用至不同客戶，無法發揮資訊公司可大量量產（scale）的優勢 %JCY"
`;

exports[`TextEditor edit text from previous one 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %hF7
[?] B@23-25 小倉位 %3qR
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx
- 情報 %5uM
- 企業決策中心 %Bv0
[+]
提供政府服務 %nhh
營收增長高 %Hfx
利潤率進步 %xB7
[-]
至今10多年仍無法盈利 %i61
需要商業化，不僅是做政府生意 %vYk

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo"
`;

exports[`TextEditor edit text from previous one 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[=]",
  },
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%hF7",
    "str": " [[大數據]] [[SaaS]]",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[?]",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
      "value": "B@23-25 小倉位",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3qR",
    "str": " B@23-25 小倉位",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "mark": "[*]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[*]",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "mark": "[*]",
      "value": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3Wx",
    "str": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "mark": "[*]",
      "value": "- 情報",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%5uM",
    "str": "- 情報",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "mark": "[*]",
      "value": "- 企業決策中心",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Bv0",
    "str": "- 企業決策中心",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "mark": "[+]",
      "value": "提供政府服務",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%nhh",
    "str": "提供政府服務",
  },
  Object {
    "linenumber": 9,
    "marker": Object {
      "mark": "[+]",
      "value": "營收增長高",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Hfx",
    "str": "營收增長高",
  },
  Object {
    "linenumber": 10,
    "marker": Object {
      "mark": "[+]",
      "value": "利潤率進步",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%xB7",
    "str": "利潤率進步",
  },
  Object {
    "linenumber": 11,
    "marker": Object {
      "mark": "[-]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[-]",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "mark": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%i61",
    "str": "至今10多年仍無法盈利",
  },
  Object {
    "linenumber": 13,
    "marker": Object {
      "mark": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vYk",
    "str": "需要商業化，不僅是做政府生意",
  },
  Object {
    "linenumber": 16,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 17,
    "marker": Object {
      "mark": "[+]",
      "value": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vjo",
    "str": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化",
  },
]
`;

exports[`TextEditor edit text from previous one 3`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %hF7
[?] B@23-25 小倉位 %3qR
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx
- 情報 %5uM
- 企業決策中心 %Bv0
對象：各國政府，FBI、CIA、美軍等 %7Wi
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %Kci
[+]
提供政府服務 %nhh
營收增長高 %Hfx
利潤率進步 %xB7
現金充足，財務沒有問題 %00Y
有炒股動力，@ARK、@WSB皆關注 %oQj
[-]
至今10多年仍無法盈利 %i61
需要商業化，不僅是做政府生意 %vYk
股權獎勵高，拉低盈利 %5KH
很難做到像消費者級別的量，增長的想像空間不大 %Jrd

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo
[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場 %iKS
太空商業化將帶來新的商業模式 %psv"
`;

exports[`TextEditor edit text from previous one 4`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[=]",
  },
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%hF7",
    "str": " [[大數據]] [[SaaS]] %hF7",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[?]",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
      "value": "B@23-25 小倉位",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3qR",
    "str": " B@23-25 小倉位 %3qR",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "mark": "[*]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[*]",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "mark": "[*]",
      "value": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3Wx",
    "str": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "mark": "[*]",
      "value": "- 情報",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%5uM",
    "str": "- 情報 %5uM",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "mark": "[*]",
      "value": "- 企業決策中心",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Bv0",
    "str": "- 企業決策中心 %Bv0",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "mark": "[*]",
      "value": "對象：各國政府，FBI、CIA、美軍等",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%7Wi",
    "str": "對象：各國政府，FBI、CIA、美軍等",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "mark": "[*]",
      "value": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Kci",
    "str": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
  },
  Object {
    "linenumber": 9,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 10,
    "marker": Object {
      "mark": "[+]",
      "value": "提供政府服務",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%nhh",
    "str": "提供政府服務 %nhh",
  },
  Object {
    "linenumber": 11,
    "marker": Object {
      "mark": "[+]",
      "value": "營收增長高",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Hfx",
    "str": "營收增長高 %Hfx",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "mark": "[+]",
      "value": "利潤率進步",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%xB7",
    "str": "利潤率進步 %xB7",
  },
  Object {
    "linenumber": 13,
    "marker": Object {
      "mark": "[+]",
      "value": "現金充足，財務沒有問題",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00Y",
    "str": "現金充足，財務沒有問題",
  },
  Object {
    "linenumber": 14,
    "marker": Object {
      "mark": "[+]",
      "value": "有炒股動力，@ARK、@WSB皆關注",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%oQj",
    "str": "有炒股動力，@ARK、@WSB皆關注",
  },
  Object {
    "linenumber": 15,
    "marker": Object {
      "mark": "[-]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[-]",
  },
  Object {
    "linenumber": 16,
    "marker": Object {
      "mark": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%i61",
    "str": "至今10多年仍無法盈利 %i61",
  },
  Object {
    "linenumber": 17,
    "marker": Object {
      "mark": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vYk",
    "str": "需要商業化，不僅是做政府生意 %vYk",
  },
  Object {
    "linenumber": 18,
    "marker": Object {
      "mark": "[-]",
      "value": "股權獎勵高，拉低盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%5KH",
    "str": "股權獎勵高，拉低盈利",
  },
  Object {
    "linenumber": 19,
    "marker": Object {
      "mark": "[-]",
      "value": "很難做到像消費者級別的量，增長的想像空間不大",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Jrd",
    "str": "很難做到像消費者級別的量，增長的想像空間不大",
  },
  Object {
    "linenumber": 22,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 23,
    "marker": Object {
      "mark": "[+]",
      "value": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vjo",
    "str": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo",
  },
  Object {
    "linenumber": 24,
    "marker": Object {
      "mark": "[+]",
      "value": "[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%iKS",
    "str": "[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場",
  },
  Object {
    "linenumber": 25,
    "marker": Object {
      "mark": "[+]",
      "value": "太空商業化將帶來新的商業模式",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%psv",
    "str": "太空商業化將帶來新的商業模式",
  },
]
`;

exports[`TextEditor edit text from previous stored text 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %hF7
[?] B@23-25 小倉位 %3qR
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx
- 情報 %5uM
- 企業決策中心 %Bv0
[+]
提供政府服務 %nhh
營收增長高 %Hfx
利潤率進步 %xB7
[-]
至今10多年仍無法盈利 %i61
需要商業化，不僅是做政府生意 %vYk

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo"
`;

exports[`TextEditor edit text from previous stored text 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[=]",
  },
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%hF7",
    "str": " [[大數據]] [[SaaS]]",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[?]",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
      "value": "B@23-25 小倉位",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3qR",
    "str": " B@23-25 小倉位",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "mark": "[*]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[*]",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "mark": "[*]",
      "value": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3Wx",
    "str": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "mark": "[*]",
      "value": "- 情報",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%5uM",
    "str": "- 情報",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "mark": "[*]",
      "value": "- 企業決策中心",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Bv0",
    "str": "- 企業決策中心",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "mark": "[+]",
      "value": "提供政府服務",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%nhh",
    "str": "提供政府服務",
  },
  Object {
    "linenumber": 9,
    "marker": Object {
      "mark": "[+]",
      "value": "營收增長高",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Hfx",
    "str": "營收增長高",
  },
  Object {
    "linenumber": 10,
    "marker": Object {
      "mark": "[+]",
      "value": "利潤率進步",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%xB7",
    "str": "利潤率進步",
  },
  Object {
    "linenumber": 11,
    "marker": Object {
      "mark": "[-]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[-]",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "mark": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%i61",
    "str": "至今10多年仍無法盈利",
  },
  Object {
    "linenumber": 13,
    "marker": Object {
      "mark": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vYk",
    "str": "需要商業化，不僅是做政府生意",
  },
  Object {
    "linenumber": 16,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 17,
    "marker": Object {
      "mark": "[+]",
      "value": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vjo",
    "str": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化",
  },
]
`;

exports[`TextEditor edit text from previous stored text 3`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %hF7
[?] B@23-25 小倉位 %3qR
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx
- 情報 %5uM
- 企業決策中心 %Bv0
對象：各國政府，FBI、CIA、美軍等 %7Wi
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %Kci
[+]
提供政府服務 %nhh
營收增長高 %Hfx
利潤率進步 %xB7
現金充足，財務沒有問題 %00Y
有炒股動力，@ARK、@WSB皆關注 %oQj
[-]
至今10多年仍無法盈利 %i61
需要商業化，不僅是做政府生意 %vYk
股權獎勵高，拉低盈利 %5KH
很難做到像消費者級別的量，增長的想像空間不大 %Jrd

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo
[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場 %iKS
太空商業化將帶來新的商業模式 %psv"
`;

exports[`TextEditor edit text from previous stored text 4`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[=]",
  },
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%hF7",
    "str": " [[大數據]] [[SaaS]] %hF7",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[?]",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
      "value": "B@23-25 小倉位",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3qR",
    "str": " B@23-25 小倉位 %3qR",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "mark": "[*]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[*]",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "mark": "[*]",
      "value": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3Wx",
    "str": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "mark": "[*]",
      "value": "- 情報",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%5uM",
    "str": "- 情報 %5uM",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "mark": "[*]",
      "value": "- 企業決策中心",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Bv0",
    "str": "- 企業決策中心 %Bv0",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "mark": "[*]",
      "value": "對象：各國政府，FBI、CIA、美軍等",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%7Wi",
    "str": "對象：各國政府，FBI、CIA、美軍等",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "mark": "[*]",
      "value": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Kci",
    "str": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
  },
  Object {
    "linenumber": 9,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 10,
    "marker": Object {
      "mark": "[+]",
      "value": "提供政府服務",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%nhh",
    "str": "提供政府服務 %nhh",
  },
  Object {
    "linenumber": 11,
    "marker": Object {
      "mark": "[+]",
      "value": "營收增長高",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Hfx",
    "str": "營收增長高 %Hfx",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "mark": "[+]",
      "value": "利潤率進步",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%xB7",
    "str": "利潤率進步 %xB7",
  },
  Object {
    "linenumber": 13,
    "marker": Object {
      "mark": "[+]",
      "value": "現金充足，財務沒有問題",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00Y",
    "str": "現金充足，財務沒有問題",
  },
  Object {
    "linenumber": 14,
    "marker": Object {
      "mark": "[+]",
      "value": "有炒股動力，@ARK、@WSB皆關注",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%oQj",
    "str": "有炒股動力，@ARK、@WSB皆關注",
  },
  Object {
    "linenumber": 15,
    "marker": Object {
      "mark": "[-]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[-]",
  },
  Object {
    "linenumber": 16,
    "marker": Object {
      "mark": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%i61",
    "str": "至今10多年仍無法盈利 %i61",
  },
  Object {
    "linenumber": 17,
    "marker": Object {
      "mark": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vYk",
    "str": "需要商業化，不僅是做政府生意 %vYk",
  },
  Object {
    "linenumber": 18,
    "marker": Object {
      "mark": "[-]",
      "value": "股權獎勵高，拉低盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%5KH",
    "str": "股權獎勵高，拉低盈利",
  },
  Object {
    "linenumber": 19,
    "marker": Object {
      "mark": "[-]",
      "value": "很難做到像消費者級別的量，增長的想像空間不大",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Jrd",
    "str": "很難做到像消費者級別的量，增長的想像空間不大",
  },
  Object {
    "linenumber": 22,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 23,
    "marker": Object {
      "mark": "[+]",
      "value": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vjo",
    "str": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo",
  },
  Object {
    "linenumber": 24,
    "marker": Object {
      "mark": "[+]",
      "value": "[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%iKS",
    "str": "[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場",
  },
  Object {
    "linenumber": 25,
    "marker": Object {
      "mark": "[+]",
      "value": "太空商業化將帶來新的商業模式",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%psv",
    "str": "太空商業化將帶來新的商業模式",
  },
]
`;

exports[`TextEditor handle common cases 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %Ubz
[?] B@23-25 小倉位 %mnN
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %7Od
- 情報 %pd9
- 企業決策中心 %Lbz
對象：各國政府，FBI、CIA、美軍等 %wYp
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %ulo
[+]
提供政府服務 %h5Q
營收增長高 %p2h
利潤率進步 %rHQ
現金充足，財務沒有問題 %cLk
有炒股動力，@ARK、@WSB皆關注 %dhk
[-]
至今10多年仍無法盈利 %b4r
需要商業化，不僅是做政府生意 %V0n
股權獎勵高，拉低盈利 %D6Y
很難做到像消費者級別的量，增長的想像空間不大 %Qu5"
`;

exports[`TextEditor handle common cases 2`] = `
"[[財政赤字貨幣化]]
[*]
和[[現代貨幣理論]]緊密相關 %Drx

[[現代貨幣理論]]
[*]
成立前提： %bL5
- 政府沒有硬性承諾（硬錨），只有軟性承諾（軟錨），目前主流為國內通膨控制在2%左右 %PBO
- 美、歐元等國際貨幣的通脹可由全球分攤，美歐通脹不會大幅上升 %zMR
疫情後美國財政政策奉行現代貨幣理論 %BxZ"
`;

exports[`TextEditor handle common cases 3`] = `
"$HOL
[#] 夢想股 %zKt
[?] B %QXN
[+]
收購Astra ，Astra老闆為前NASA主任 %A8W
發展小型運載火箭、運載小型衛星、可量產、天天發射 %DRq
2025年營收達25億美元 %FuM
和$SRAC相比 %2ER
想像空間大 %G8V
[-]
短期有追高 %Dbp

$SPCE
[?] Buy %P1q
[+]
重新舉行太空試飛計畫 %wAR
[-]
試飛失敗將重挫（例2020試飛失敗後大跌） %cTG

[[SPAC]]
操作需保持耐心、很少一次拉上去，以$SRAC為例，均在觸及20日均線後反彈

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %Qwx
[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場 %7VK
太空商業化將帶來新的商業模式 %czQ

[[ULA]]
由$BA與$LMT聯合成立
和[[SpaceX]]是競爭關係

[[SpaceX]]
尚未上市
目前價值最高的太空股

$BA
[?] B (逐步買入) %UuQ

$LMT
$300可能是底部"
`;

exports[`TextEditor handle common cases 4`] = `
"[*]
重點在翻譯$PLTR CEO財報發布會上所說的話 #求來源 \`> 相當繞口，確實數據真實度是個問題，但並沒有說如何解決\` %x4P

$PLTR
[?] B 支撐@22 %8LT
[*]
產品：用[[AI]]幫政府情報單位執行機密軍事行動、大數據幫能源、航空公司、醫療藥品研究 %Rz6
[+]
[[ARK]]看好，在股票大跌後大買進 %95H
CEO是技術出身
[-]
目前收入有60%來自政府 %CIN
[!]
股價解禁日拋售，股價大跌 %1bb

//////

$PLTR@ME
[*]
產品：[[大數據]]分析 %Chg
[-]
大數據分析無法量產，發展受限 %YCH
[!]
財報發布會 %EyD

[[大數據]]@ME
[-]
大數據分析一般只能做B2B，且需客製化，無法量產應用至不同客戶，無法發揮資訊公司可大量量產（scale）的優勢 %JCY"
`;

exports[`TextEditor insert markerline 1`] = `
"
[=]
[[大數據]] [[SaaS]] %JD6
[?]
B@23-25 小倉位 %fQE
\\"预计该股票会有更大的波动性\\" #無幫助 %v9A
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %f0g
- 情報 %3eT
- 企業決策中心 %sVt
對象：各國政府，FBI、CIA、美軍等 %IqD
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %niE
產品：3个软件平台 %93w
- Foundry：帮公司构建自己的SaaS来充当数据应用程序的操作系统，以获取预测，可能的结果，建议等。 %LIf
- Gotham：用于情报，执法和国防安全领域的软件平台，它可以识别模式并预测数据以帮助预防犯罪。 %pd8
- Apollo：平台背后的平台，自动监视,管理与更新Foundry和Gotham的软件。类似Microsoft，Apple或Google更新他们软件的方式。 %SY9
[+]
提供政府服務 %fR6
營收增長高 %7in
利潤率進步 %NaN
現金充足，財務沒有問題 %eAf
有炒股動力，@ARK、@WSB皆關注 %jv1
\\"并不完全地依赖政府。他们还拥有18亿现金\\" %cKz
[-]
至今10多年仍無法盈利 %YQL
需要商業化，不僅是做政府生意 %fFJ
股權獎勵高，拉低盈利 %YjD
很難做到像消費者級別的量，增長的想像空間不大 %D70"
`;

exports[`TextEditor 可以加入markerline 1`] = `
"
[=]
[[大數據]] [[SaaS]] %PBO
[?]
B@23-25 小倉位 %zMR
\\"预计该股票会有更大的波动性\\" #無幫助 %CIN
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %BxZ
- 情報 %zKt
- 企業決策中心 %QXN
對象：各國政府，FBI、CIA、美軍等 %A8W
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %DRq
產品：3个软件平台 %1bb
- Foundry：帮公司构建自己的SaaS来充当数据应用程序的操作系统，以获取预测，可能的结果，建议等。 %Chg
- Gotham：用于情报，执法和国防安全领域的软件平台，它可以识别模式并预测数据以帮助预防犯罪。 %YCH
- Apollo：平台背后的平台，自动监视,管理与更新Foundry和Gotham的软件。类似Microsoft，Apple或Google更新他们软件的方式。 %EyD
[+]
提供政府服務 %FuM
營收增長高 %2ER
利潤率進步 %G8V
現金充足，財務沒有問題 %Dbp
有炒股動力，@ARK、@WSB皆關注 %P1q
\\"并不完全地依赖政府。他们还拥有18亿现金\\" %JCY
[-]
至今10多年仍無法盈利 %wAR
需要商業化，不僅是做政府生意 %cTG
股權獎勵高，拉低盈利 %Qwx
很難做到像消費者級別的量，增長的想像空間不大 %7VK"
`;

exports[`TextEditor 可繼續之前的text 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %hF7
[?] B@23-25 小倉位 %3qR
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx
- 情報 %5uM
- 企業決策中心 %Bv0
[+]
提供政府服務 %nhh
營收增長高 %Hfx
利潤率進步 %xB7
[-]
至今10多年仍無法盈利 %i61
需要商業化，不僅是做政府生意 %vYk

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo"
`;

exports[`TextEditor 可繼續之前的text 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[=]",
  },
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%hF7",
    "str": " [[大數據]] [[SaaS]]",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[?]",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
      "value": "B@23-25 小倉位",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3qR",
    "str": " B@23-25 小倉位",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "mark": "[*]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[*]",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "mark": "[*]",
      "value": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3Wx",
    "str": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "mark": "[*]",
      "value": "- 情報",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%5uM",
    "str": "- 情報",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "mark": "[*]",
      "value": "- 企業決策中心",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Bv0",
    "str": "- 企業決策中心",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "mark": "[+]",
      "value": "提供政府服務",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%nhh",
    "str": "提供政府服務",
  },
  Object {
    "linenumber": 9,
    "marker": Object {
      "mark": "[+]",
      "value": "營收增長高",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Hfx",
    "str": "營收增長高",
  },
  Object {
    "linenumber": 10,
    "marker": Object {
      "mark": "[+]",
      "value": "利潤率進步",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%xB7",
    "str": "利潤率進步",
  },
  Object {
    "linenumber": 11,
    "marker": Object {
      "mark": "[-]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[-]",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "mark": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%i61",
    "str": "至今10多年仍無法盈利",
  },
  Object {
    "linenumber": 13,
    "marker": Object {
      "mark": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vYk",
    "str": "需要商業化，不僅是做政府生意",
  },
  Object {
    "linenumber": 16,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 17,
    "marker": Object {
      "mark": "[+]",
      "value": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vjo",
    "str": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化",
  },
]
`;

exports[`TextEditor 可繼續之前的text 3`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %hF7
[?] B@23-25 小倉位 %3qR
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx
- 情報 %5uM
- 企業決策中心 %Bv0
對象：各國政府，FBI、CIA、美軍等 %7Wi
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %Kci
[+]
提供政府服務 %nhh
營收增長高 %Hfx
利潤率進步 %xB7
現金充足，財務沒有問題 %00Y
有炒股動力，@ARK、@WSB皆關注 %oQj
[-]
至今10多年仍無法盈利 %i61
需要商業化，不僅是做政府生意 %vYk
股權獎勵高，拉低盈利 %5KH
很難做到像消費者級別的量，增長的想像空間不大 %Jrd

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo
[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場 %iKS
太空商業化將帶來新的商業模式 %psv"
`;

exports[`TextEditor 可繼續之前的text 4`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[=]",
  },
  Object {
    "linenumber": 1,
    "marker": Object {
      "mark": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%hF7",
    "str": " [[大數據]] [[SaaS]] %hF7",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[?]",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "mark": "[?]",
      "value": "B@23-25 小倉位",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3qR",
    "str": " B@23-25 小倉位 %3qR",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "mark": "[*]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[*]",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "mark": "[*]",
      "value": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%3Wx",
    "str": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "mark": "[*]",
      "value": "- 情報",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%5uM",
    "str": "- 情報 %5uM",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "mark": "[*]",
      "value": "- 企業決策中心",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Bv0",
    "str": "- 企業決策中心 %Bv0",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "mark": "[*]",
      "value": "對象：各國政府，FBI、CIA、美軍等",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%7Wi",
    "str": "對象：各國政府，FBI、CIA、美軍等",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "mark": "[*]",
      "value": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Kci",
    "str": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
  },
  Object {
    "linenumber": 9,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 10,
    "marker": Object {
      "mark": "[+]",
      "value": "提供政府服務",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%nhh",
    "str": "提供政府服務 %nhh",
  },
  Object {
    "linenumber": 11,
    "marker": Object {
      "mark": "[+]",
      "value": "營收增長高",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Hfx",
    "str": "營收增長高 %Hfx",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "mark": "[+]",
      "value": "利潤率進步",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%xB7",
    "str": "利潤率進步 %xB7",
  },
  Object {
    "linenumber": 13,
    "marker": Object {
      "mark": "[+]",
      "value": "現金充足，財務沒有問題",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00Y",
    "str": "現金充足，財務沒有問題",
  },
  Object {
    "linenumber": 14,
    "marker": Object {
      "mark": "[+]",
      "value": "有炒股動力，@ARK、@WSB皆關注",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%oQj",
    "str": "有炒股動力，@ARK、@WSB皆關注",
  },
  Object {
    "linenumber": 15,
    "marker": Object {
      "mark": "[-]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "str": "[-]",
  },
  Object {
    "linenumber": 16,
    "marker": Object {
      "mark": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%i61",
    "str": "至今10多年仍無法盈利 %i61",
  },
  Object {
    "linenumber": 17,
    "marker": Object {
      "mark": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vYk",
    "str": "需要商業化，不僅是做政府生意 %vYk",
  },
  Object {
    "linenumber": 18,
    "marker": Object {
      "mark": "[-]",
      "value": "股權獎勵高，拉低盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%5KH",
    "str": "股權獎勵高，拉低盈利",
  },
  Object {
    "linenumber": 19,
    "marker": Object {
      "mark": "[-]",
      "value": "很難做到像消費者級別的量，增長的想像空間不大",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%Jrd",
    "str": "很難做到像消費者級別的量，增長的想像空間不大",
  },
  Object {
    "linenumber": 22,
    "marker": Object {
      "mark": "[+]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "str": "[+]",
  },
  Object {
    "linenumber": 23,
    "marker": Object {
      "mark": "[+]",
      "value": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%vjo",
    "str": "有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo",
  },
  Object {
    "linenumber": 24,
    "marker": Object {
      "mark": "[+]",
      "value": "[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%iKS",
    "str": "[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場",
  },
  Object {
    "linenumber": 25,
    "marker": Object {
      "mark": "[+]",
      "value": "太空商業化將帶來新的商業模式",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%psv",
    "str": "太空商業化將帶來新的商業模式",
  },
]
`;

exports[`TextEditor 各種情況 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %Ubz
[?] B@23-25 小倉位 %mnN
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %7Od
- 情報 %pd9
- 企業決策中心 %Lbz
對象：各國政府，FBI、CIA、美軍等 %wYp
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %ulo
[+]
提供政府服務 %h5Q
營收增長高 %p2h
利潤率進步 %rHQ
現金充足，財務沒有問題 %cLk
有炒股動力，@ARK、@WSB皆關注 %dhk
[-]
至今10多年仍無法盈利 %b4r
需要商業化，不僅是做政府生意 %V0n
股權獎勵高，拉低盈利 %D6Y
很難做到像消費者級別的量，增長的想像空間不大 %Qu5"
`;

exports[`TextEditor 各種情況 2`] = `
"[[財政赤字貨幣化]]
[*]
和[[現代貨幣理論]]緊密相關 %Drx

[[現代貨幣理論]]
[*]
成立前提： %bL5
- 政府沒有硬性承諾（硬錨），只有軟性承諾（軟錨），目前主流為國內通膨控制在2%左右 %PBO
- 美、歐元等國際貨幣的通脹可由全球分攤，美歐通脹不會大幅上升 %zMR
疫情後美國財政政策奉行現代貨幣理論 %BxZ"
`;

exports[`TextEditor 各種情況 3`] = `
"$HOL
[#] 夢想股 %zKt
[?] B %QXN
[+]
收購Astra ，Astra老闆為前NASA主任 %A8W
發展小型運載火箭、運載小型衛星、可量產、天天發射 %DRq
2025年營收達25億美元 %FuM
和$SRAC相比 %2ER
想像空間大 %G8V
[-]
短期有追高 %Dbp

$SPCE
[?] Buy %P1q
[+]
重新舉行太空試飛計畫 %wAR
[-]
試飛失敗將重挫（例2020試飛失敗後大跌） %cTG

[[SPAC]]
操作需保持耐心、很少一次拉上去，以$SRAC為例，均在觸及20日均線後反彈

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %Qwx
[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場 %7VK
太空商業化將帶來新的商業模式 %czQ

[[ULA]]
由$BA與$LMT聯合成立
和[[SpaceX]]是競爭關係

[[SpaceX]]
尚未上市
目前價值最高的太空股

$BA
[?] B (逐步買入) %UuQ

$LMT
$300可能是底部"
`;

exports[`TextEditor 各種情況 4`] = `
"[*]
重點在翻譯$PLTR CEO財報發布會上所說的話 #求來源 \`> 相當繞口，確實數據真實度是個問題，但並沒有說如何解決\` %x4P

$PLTR
[?] B 支撐@22 %8LT
[*]
產品：用[[AI]]幫政府情報單位執行機密軍事行動、大數據幫能源、航空公司、醫療藥品研究 %Rz6
[+]
[[ARK]]看好，在股票大跌後大買進 %95H
CEO是技術出身
[-]
目前收入有60%來自政府 %CIN
[!]
股價解禁日拋售，股價大跌 %1bb

//////

$PLTR@ME
[*]
產品：[[大數據]]分析 %Chg
[-]
大數據分析無法量產，發展受限 %YCH
[!]
財報發布會 %EyD

[[大數據]]@ME
[-]
大數據分析一般只能做B2B，且需客製化，無法量產應用至不同客戶，無法發揮資訊公司可大量量產（scale）的優勢 %JCY"
`;

exports[`TextEditor 辨識marker並增加stamps 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %a9g
[?] B@23-25 小倉位 %57c
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %f1n
- 情報 %Utz
- 企業決策中心 %5vE
對象：各國政府，FBI、CIA、美軍等 %kFy
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %MNF
[+]
提供政府服務 %rjC
營收增長高 %r2L
利潤率進步 %yoL
現金充足，財務沒有問題 %whh
有炒股動力，@ARK、@WSB皆關注 %RJz
[-]
至今10多年仍無法盈利 %WvO
需要商業化，不僅是做政府生意 %KPm
股權獎勵高，拉低盈利 %sgP
很難做到像消費者級別的量，增長的想像空間不大 %T4b"
`;

exports[`TextEditor 辨識marker並增加stamps 2`] = `
"[[財政赤字貨幣化]]
[*]
和[[現代貨幣理論]]緊密相關 %JD6

[[現代貨幣理論]]
[*]
成立前提： %fQE
- 政府沒有硬性承諾（硬錨），只有軟性承諾（軟錨），目前主流為國內通膨控制在2%左右 %f0g
- 美、歐元等國際貨幣的通脹可由全球分攤，美歐通脹不會大幅上升 %3eT
疫情後美國財政政策奉行現代貨幣理論 %sVt"
`;

exports[`TextEditor 辨識marker並增加stamps 3`] = `
"$HOL
[#] 夢想股 %IqD
[?] B %niE
[+]
收購Astra ，Astra老闆為前NASA主任 %fR6
發展小型運載火箭、運載小型衛星、可量產、天天發射 %7in
2025年營收達25億美元 %NaN
和$SRAC相比 %eAf
想像空間大 %jv1
[-]
短期有追高 %YQL

$SPCE
[?] Buy %fFJ
[+]
重新舉行太空試飛計畫 %YjD
[-]
試飛失敗將重挫（例2020試飛失敗後大跌） %D70

[[SPAC]]
操作需保持耐心、很少一次拉上去，以$SRAC為例，均在觸及20日均線後反彈

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %liP
[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場 %uNN
太空商業化將帶來新的商業模式 %zMj

[[ULA]]
由$BA與$LMT聯合成立
和[[SpaceX]]是競爭關係

[[SpaceX]]
尚未上市
目前價值最高的太空股

$BA
[?] B (逐步買入) %yoP

$LMT
$300可能是底部"
`;

exports[`TextEditor 辨識marker並增加stamps 4`] = `
"[*]
重點在翻譯$PLTR CEO財報發布會上所說的話 #求來源 \`> 相當繞口，確實數據真實度是個問題，但並沒有說如何解決\` %fYt

$PLTR
[?] B 支撐@22 %xaH
[*]
產品：用[[AI]]幫政府情報單位執行機密軍事行動、大數據幫能源、航空公司、醫療藥品研究 %v9A
[+]
[[ARK]]看好，在股票大跌後大買進 %93w
CEO是技術出身
[-]
目前收入有60%來自政府 %LIf
[!]
股價解禁日拋售，股價大跌 %pd8

//////

$PLTR@ME
[*]
產品：[[大數據]]分析 %SY9
[-]
大數據分析無法量產，發展受限 %cKz
[!]
財報發布會 %Ubz

[[大數據]]@ME
[-]
大數據分析一般只能做B2B，且需客製化，無法量產應用至不同客戶，無法發揮資訊公司可大量量產（scale）的優勢 %mnN"
`;

exports[`parser tokenize to sections 1`] = `
Array [
  Object {
    "breaker": undefined,
    "nestedCard": undefined,
    "root": undefined,
    "ticker": undefined,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "root": undefined,
    "ticker": true,
    "topic": undefined,
  },
]
`;

exports[`parser tokenize to sections 2`] = `
Array [
  Object {
    "breaker": undefined,
    "nestedCard": undefined,
    "root": undefined,
    "ticker": undefined,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[財政赤字貨幣化]]",
    },
    "root": true,
    "ticker": undefined,
    "topic": true,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[現代貨幣理論]]",
    },
    "root": true,
    "ticker": undefined,
    "topic": true,
  },
]
`;

exports[`parser tokenize to sections 3`] = `
Array [
  Object {
    "breaker": undefined,
    "nestedCard": undefined,
    "root": undefined,
    "ticker": undefined,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$HOL",
    },
    "root": undefined,
    "ticker": true,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$SPCE",
    },
    "root": undefined,
    "ticker": true,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[SPAC]]",
    },
    "root": true,
    "ticker": undefined,
    "topic": true,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[太空股]]",
    },
    "root": true,
    "ticker": undefined,
    "topic": true,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[ULA]]",
    },
    "root": true,
    "ticker": undefined,
    "topic": true,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "[[SpaceX]]",
    },
    "root": true,
    "ticker": undefined,
    "topic": true,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$BA",
    },
    "root": undefined,
    "ticker": true,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$LMT",
    },
    "root": undefined,
    "ticker": true,
    "topic": undefined,
  },
]
`;

exports[`parser tokenize to sections 4`] = `
Array [
  Object {
    "breaker": undefined,
    "nestedCard": undefined,
    "root": true,
    "ticker": undefined,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "root": undefined,
    "ticker": true,
    "topic": undefined,
  },
  Object {
    "breaker": true,
    "nestedCard": undefined,
    "root": undefined,
    "ticker": undefined,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": undefined,
    "root": true,
    "ticker": undefined,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": "@ME",
      "symbol": "$PLTR",
    },
    "root": undefined,
    "ticker": true,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": "@ME",
      "symbol": "[[大數據]]",
    },
    "root": true,
    "ticker": undefined,
    "topic": true,
  },
]
`;
